--- a/res/layout/email_event.xml
+++ b/res/layout/email_event.xml
@@ -29,29 +29,19 @@
     </EditText>
 
     <Button
-        android:id="@+id/emailCancelButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:minWidth="160dp"
-        android:text="Cancel" />
-
-    <Button
         android:id="@+id/sendButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/emailCancelButton"
-        android:layout_toRightOf="@+id/emailCancelButton"
         android:text="Send" />
 
     <ListView
         android:id="@+id/listView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/emailCancelButton"
+        android:layout_above="@+id/sendButton"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/emailAddressTextField" >
 
