adding alertDialog menu

--- a/res/layout/row.xml
+++ b/res/layout/row.xml
@@ -15,8 +15,10 @@
         android:id="@+id/rowEventTitleTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:clickable="true"
         android:gravity="center"
         android:includeFontPadding="false"
+        android:longClickable="true"
         android:text="TestingTextView" />
 
 </LinearLayout>
