--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -24,7 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/toDoListTextView" >
+        android:layout_below="@+id/toDoListTextView"
+        android:longClickable="true" >
 
     </ListView>
 
