--- a/res/layout/email_event.xml
+++ b/res/layout/email_event.xml
@@ -35,10 +35,11 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
+        android:onClick="sendButtonPressed"
         android:text="Send" />
 
     <ListView
-        android:id="@+id/listView1"
+        android:id="@+id/EmailListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/sendButton"
